--- a/stylesheet.css
+++ b/stylesheet.css
@@ -44,13 +44,13 @@ h1, h2, h3, h4, p {
 }
 
 h1 {
-font-size: .8em;
+font-size: 3em;
 }
 
 h4 {
-    font-size: .95em;
+    font-size: .85em;
 }
 
 p {
-    font-size: .8em;
+    font-size: .75em;
 }
