attempting to fix vertical scroll on desktop

--- a/css/agency-of-inc.webflow.css
+++ b/css/agency-of-inc.webflow.css
@@ -856,6 +856,10 @@ h1 {
   grid-template-rows: auto;
 }
 
+.section-6 {
+  overflow: hidden;
+}
+
 @media (max-width: 991px) {
   .full-container {
     margin-top: 0px;
