--- a/css/agency-of-inc.webflow.css
+++ b/css/agency-of-inc.webflow.css
@@ -570,11 +570,9 @@ h1 {
 }
 
 .image-8 {
-  overflow: hidden;
   width: 992px;
-  max-width: none;
   min-height: auto;
-  min-width: auto;
+  min-width: 320px;
   margin-bottom: 0px;
   padding-bottom: 0px;
 }
@@ -1024,12 +1022,12 @@ h1 {
   }
   .image-8 {
     overflow: hidden;
-    width: 136%;
-    min-width: 136%;
+    width: 100%;
+    min-width: 100%;
     margin-bottom: 33px;
     margin-left: 0px;
     padding-bottom: 0px;
-    padding-left: 49px;
+    padding-left: 0px;
   }
   .section-2 {
     display: none;
