--- a/css/agency-of-inc.webflow.css
+++ b/css/agency-of-inc.webflow.css
@@ -995,7 +995,7 @@ h1 {
   }
   .full-container.multidisciplinary {
     overflow: visible;
-    height: auto;
+    height: 50vh;
     min-height: auto;
     margin-top: 100px;
     margin-bottom: 32px;
